Update docker version

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,17 @@ language: bash
 services:
   - docker
 
+addons:
+  apt:
+    packages:
+      - docker-ce
+
+before_install:
+  - sudo apt-get remove docker docker-engine docker.io containerd runc
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - sudo apt-get update
+
 install:
   - ./clone-projector-core.sh
   - ./build-container.sh
