Update docker image build configuration

--- a/Dockerfile.dockerignore
+++ b/Dockerfile.dockerignore
@@ -5,5 +5,4 @@
 !/projector-client/**
 !/projector-server/**
 !/projector-docker/static/**
-!jce_policy/**
-!/jce_policy/**
+!/projector-docker/jce_policy/**
