--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,19 @@
-language: bash
+language: shell
 
 os: linux
 dist: bionic
 
 services:
   - docker
+
+cache:
+  directories:
+    - $HOME/docker
+
+before_cache:
+  - >
+    mkdir -p $HOME/docker && docker images -a --filter='dangling=false' --format '{{.Repository}}:{{.Tag}} {{.ID}}'
+    | xargs -n 2 -t sh -c 'test -e $HOME/docker/$1.tar.gz || docker save $0 | gzip -2 > $HOME/docker/$1.tar.gz'
 
 before_install:
   - sudo apt-get remove docker docker-engine docker.io containerd runc
@@ -13,6 +22,7 @@ before_install:
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
   - docker --version
+  - if [[ -d $HOME/docker ]]; then ls $HOME/docker/*.tar.gz | xargs -I {file} sh -c "zcat {file} | docker load"; fi
 
 install:
   - ./clone-projector-core.sh
