--- a/Dockerfile.dockerignore
+++ b/Dockerfile.dockerignore
@@ -5,5 +5,6 @@
 !/projector-client/**
 !/projector-server/**
 !/projector-docker/static/**
+!/projector-docker/build_tools/**
 !/projector-docker/idea_plugins/**
 !/projector-docker/jce_policy/**
